Check if name already exists, Bug fixes.
